<resources>
    <string name="app_name">RealBDState</string>
    <string name="AppsName">BDLand</string>
    <string name="greeting_text1">Welcome! to BDLand</string>
    <string name="greeting_text2">Best camera for capture properties photo.</string>
    <string name="greeting_text3">RealState business Platform. You can also buy</string>
    <string name="greeting_text4">sell and rent your property</string>
    <string name="login_text">Start With GOOGLE</string>
    <string name="detailsPage">Lets Start Discovering New Places Today.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact</string>
    <string name="let_s_do_this">Let\'s do this!</string>
    <string name="greeting_text5">Thank You for being\nPart of us…</string>
    <string name="upload_property">Upload property</string>
    <string name="search_property">Search Property</string>
    <string name="post_request">Post Request</string>
    <string name="explore">Explore</string>
    <string name="apartment">Apartment</string>
    <string name="description">Description</string>
    <string name="agent">Agent</string>
    <string name="show_in_map">Show In MAP</string>
    <string name="upload_section">Upload Section</string>
    <string name="room_categories">Room Categories</string>
    <string name="residential">Normal Apartments</string>
    <string name="street_house">Street House</string>
    <string name="room_rentals">Room Rentals</string>
    <string name="sub_let">Sub-let</string>
    <string name="hostel">Hostel</string>
    <string name="property_type">Property Type</string>
    <string name="client_type">Client Type</string>
    <string name="any">Any</string>
    <string name="family">Family</string>
    <string name="student_hostel">Student Hostel</string>
    <string name="bachelor">Bachelor</string>
    <string name="apartment_property_location">Apartment/Property Location</string>
    <string name="divition">Division</string>
    <string name="district">District</string>
    <string name="police_station">Police Station</string>
    <string name="street_no_name">Street No/Name</string>
    <string name="address">mahammadpur nkadirabad housing road 2, house number 07</string>
    <string name="optionalText">Google Map Location (optional)</string>
    <string name="done">Done</string>
    <string name="your_area">Your Area</string>
    <string name="detailsBangladesh">All Around Bangladesh</string>
</resources>