<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    android:orientation="vertical"
    tools:context=".view.user.UploadProperty">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/upload_section"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/uploadImage"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:background="@drawable/photoup"
        android:gravity="center" />
    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/_150sdp"-->
    <!--        android:id="@+id/recentImageView"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/_3sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerUploadRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_design"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/residential"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:background="@drawable/login_button_design"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/hostel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:background="@drawable/login_button_design"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/sub_let"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/login_button_design"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/room_rentals"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </GridLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <RadioButton
                        android:id="@+id/any"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/any"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/Family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/family"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/Student_Hostel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/student_hostel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/Bachelor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/bachelor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />


                </RadioGroup>
            </HorizontalScrollView>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartment_property_location"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_2sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/divition"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <Spinner
                        android:id="@+id/divitionSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/district"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <Spinner
                        android:id="@+id/districtSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/police_station"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <Spinner
                        android:id="@+id/policeStationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street_no_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <EditText
                        android:id="@+id/streetDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optionalText"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_5sdp" />

                    <ImageView
                        android:id="@+id/getCurrentLocation"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/map_marker" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_8sdp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:text="@string/done"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>