<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    tools:context=".view.ui.SelectionUi">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bdland"
        app:civ_border_color="@color/gradient_green"
        app:civ_border_width="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/greeting_text5"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.034" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.20">

        <Button
            android:id="@+id/uploadProperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/upload_property"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_8sdp" />

        <Button
            android:id="@+id/searchProperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/search_property"
            android:textColor="@color/whiteButton"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_8sdp" />

        <Button
            android:id="@+id/uploadRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/post_request"
            android:textColor="@color/whiteButton"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_button_design"
            android:drawableEnd="@drawable/ic_next"
            android:text="@string/explore"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>