<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    tools:context=".view.user.UserDetails">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bdland"
        app:civ_border_color="@color/gradient_green"
        app:civ_border_width="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_baseline_add_photo_alternate_24"
        app:civ_border_color="@color/gradient_green"
        app:civ_border_width="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppsName"
        android:textColor="@color/gradient_green"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_text1"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsPage"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_5sdp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="First Name"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_5sdp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Last Name"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_5sdp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Last Name"
            android:drawableStart="@drawable/ic_baseline_perm_contact_calendar_24"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/contact"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp" />

        <Button
            android:id="@+id/signNextBtn"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_button_design"
            android:drawableEnd="@drawable/ic_next"
            android:text="@string/let_s_do_this"
            android:textAllCaps="false"
            android:textColor="@color/black" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>